test/tests/stages/18_structures/invalid_types/invalid_member_operators/postfix_precedence.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: a
                      Int: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 10
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CAddrOf: 
                  CArrow: 
                    TIdentifier: a
                    CVar: 
                      TIdentifier: x
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
